# idris-erlang

./: .gitignore  LICENSE  Main.hs  Readme.md  idris-erlang.cabal  rebar.config  stack.yaml
examples/: .gitignore
examples/rpc_example/: Main.idr
examples/test_primitives/: Main.idr  MainC  MainC.idr  MainErl.idr  main  main.ddecls  main.erl  output  test_file
examples/test_special_ctors/: MainErl.idr
irts/: idris_erlang_conc.erl  idris_erlang_rts.erl
libs/erlang/: ErlPrelude.idr  GenEvent.idr  GenFSM.idr  GenServer.idr  Parameterised.idr  Process.idr  erlang.ipkg
libs/erlang/Erlang/: Process.idr  RPC.idr
libs/erlang/OTP/: GenEvent.idr  GenFSM.idr  GenServer.idr  Parameterised.idr
src/: Main.hs
src/IRTS/: CodegenErlang.hs
src/IRTS/CodegenErlang/: Exports.hs  Foreign.hs
