-- TODO: add idris --install <pkg> to install steps

name:                idris-erlang
version:             0.0.1.0
synopsis:            Erlang Backend for the Idris Compiler
license:             BSD3
license-file:        LICENSE
author:              Archibald Samuel Elliott
maintainer:          ashe@st-andrews.ac.uk
category:            Compilers/Interpreters, Dependent Types
build-type:          Simple
cabal-version:       >=1.8

data-files:          irts/*.erl
                   , irts/*.beam

executable idris-erlang
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       IRTS.CodegenErlang

  build-depends:       base >=4 && <5
                     , containers >= 0.5 && < 0.6
                     , idris > 0.9.17
                     , mtl >= 2.2.1 && < 2.3
                     , transformers < 0.5
                     , directory >= 1.2 && < 1.3

  if os(linux)
     cpp-options:   -DLINUX
     build-depends: unix < 2.8
  if os(freebsd)
     cpp-options:   -DFREEBSD
     build-depends: unix < 2.8
  if os(dragonfly)
     cpp-options:   -DDRAGONFLY
     build-depends: unix < 2.8
  if os(darwin)
     cpp-options:   -DMACOSX
     build-depends: unix < 2.8
  if os(windows)
     cpp-options:   -DWINDOWS
     build-depends: Win32 < 2.4

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields
