-- TODO: add idris --install <pkg> to install steps

name:                idris-erlang
version:             0.0.3.0
synopsis:            Erlang Backend for the Idris Compiler
license:             BSD3
license-file:        LICENSE
author:              Archibald Samuel Elliott
maintainer:          sam@lenary.co.uk
category:            Compilers/Interpreters, Dependent Types
build-type:          Simple
cabal-version:       >=1.8

data-files:          irts/*.erl
                   , irts/*.beam

executable idris-codegen-erlang
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       IRTS.CodegenErlang
                     , IRTS.CodegenErlang.Foreign

  build-depends:       base             >=4 && <5
                     , containers
                     , idris            >=1 && <1.1
                     , mtl
                     , transformers
                     , directory

  if os(linux)
     cpp-options:   -DLINUX
     build-depends: unix < 2.8
  if os(freebsd)
     cpp-options:   -DFREEBSD
     build-depends: unix < 2.8
  if os(dragonfly)
     cpp-options:   -DDRAGONFLY
     build-depends: unix < 2.8
  if os(darwin)
     cpp-options:   -DMACOSX
     build-depends: unix < 2.8
  if os(windows)
     cpp-options:   -DWINDOWS
     build-depends: Win32 < 2.4

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields
